# avail-sovereign-da-adapter

./: Cargo.toml  README.md
src/: address.rs  block.rs  hash.rs  header.rs  lib.rs  service.rs  transaction.rs  types.rs  utils.rs  verifier.rs
src/spec/: address.rs  block.rs  hash.rs  header.rs  mod.rs  transaction.rs
