[package]
name = "presence"
version = "0.1.0"
edition = "2021"

[dependencies]
sov-rollup-interface =  { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f5b4bd4ef78b7ab85551a25eeb9d70ebc3c9ebd2" }

tokio = { version = "1", features = ["full"] }

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["fmt"] }

anyhow = "1.0"

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

subxt = "0.27.1"
avail-subxt = { git = "https://github.com/availproject/avail.git", tag = "v1.5.0-303f39d" }

reqwest = { version = "0.11", features = ["json"] }

[features]
default = ["native"]
native = []
verifier = []
